// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip renders 1`] = `
<DocumentFragment>
  <div>
    Toggle tooltip
  </div>
</DocumentFragment>
`;

exports[`tooltip renders in strict mode 1`] = `
<DocumentFragment>
  <div
    style="display: contents;"
  >
    <div>
      Toggle tooltip
    </div>
  </div>
</DocumentFragment>
`;
